app/assets/stylesheets/main.scss
//btn

.btn {
  border-radius: 0.1rem !important;

  &:hover:disabled {
    color: #050805;
  }
}
//form

.form-control.boxed.faq {
  box-shadow: inset -0.5px -0.5px 3px rgba(0, 0, 0, 0.6);
}

.form-control {
  border-radius: 0.1rem !important;

  &:focus {
    box-shadow: none;
  }
}

.underlined-danger {
  border: none !important;
  box-shadow: none !important;
  border-bottom: 1px solid #CC2222 !important;
}

label.hidden {
  display: none;
}

[type="search"] {
  position: relative;
  z-index: 1;
  width: 100%;
  height: 35px;
  font-size: 16px;
  border: none !important;
  background-color: transparent !important;

  & + label {
    position: absolute;
    top: 10px;
    left: 3px;
    font-size: 16px;
    color: lighten(black, 60%);
    transition: all 0.2s ease-out;
  }

  &:focus {
    outline: none;
    border-radius: 0.1rem !important;
    border-bottom: 1px solid lighten(black, 60%);
    border-width: 2px;
    background-color: white !important;
    transition: all 0.2s ease-out;
  }

  &.has-value + label,
  &:focus + label {
    top: -17px;
    color: lighten(black, 40%);
    font-size: 12px;
  }

  &.has-value {
    background-color: white !important;
  }

  &.has-value:not(:focus) + label {
    color: lighten(black, 60%);
  }
}

li.active > a {
  color: darken(#4f5f6f, 20%) !important;
}
// FORM FOR USERS

td.user {
  vertical-align: middle;
  text-align: center;
}

tr {
  // EVEN
  &:nth-of-type(even) {
    td.user-role {
      .form-control {
        background-color: rgba(0, 0, 0, 0.025) !important;
      }
    }

    &:hover {
      td.user-role {
        .form-control {
          background-color: white !important;
          transition: background-color 0s;
        }
      }
    }
  }
  // ODD
  &:nth-of-type(odd) {
    td.user-role {
      .form-control {
        background-color: white !important;
      }
    }
  }
}

.title-block {
  padding-bottom: 0;
  margin-bottom: 0.8rem;
}

.create-new {
  display: inline-block;
  padding-top: 1rem;
}

hr.under-header {
  margin-top: 6em;
  margin-bottom: 2em;
}
// PAGINATION \\

.digg_pagination {
  margin-top: 1rem;
  font-size: 1rem;
  text-align: center;
}

.pagination {
  min-width: 1.5rem;

  a {
    color: gray;
    text-decoration: none;
  }

  .current {
    text-align: center;
    color: white;
    background-color: #3a4651 !important;
  }

  span {
    min-width: inherit;
    color: #ddd !important;
    border: 1px solid #ddd;
  }
}

.pagination a,
em {
  padding: 0 0.1rem;
  font-style: normal;
  margin: 1px;
}

.pagination a,
em ~ a {
  border: 1px solid gray;
}

.next_page,
.next_page_disabled,
.previous_page,
.previous_page_disabled {
  border: 1px solid gray;
}
//TABLES

table.table {
  margin-top: 1rem;
}
//DISPLAY

.display-4 {
  font-size: 3.5rem;
  font-weight: 300;
  line-height: 1.2;
}

.display-5 {
  font-size: 3rem;
  font-weight: 300;
  line-height: 1.1;
}
//FORM

.modal-body {
  .form-control {
    box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.2);

    &:active {
      box-shadow: inherit !important;
    }
  }
}
// FORM ERRORS

#error_explanation {
  border: 2px solid rgba(120, 120, 120, 0.1);
  min-height: 50px;
  background-color: #e0e0e0;
  width: 100%;

  h2 {
    background-color: inherit;
    color: red;
  }

  ul {
    list-style: none !important;
  }

  li {
    list-style-type: none !important;
  }
}

label {
  margin-bottom: 0;
}

.field_with_errors {
  background-color: inherit;

  label {
    color: red;
  }

  input {
    border: 2px solid red !important;
  }
}

